tests/NormalTests/paczka1/fuzzy1/97351257.err
Error in line 5: RKDe S246 27,1
Error in line 14: A322 S246 4,9
Error in line 2: HBQQ71yN S333 11,4
Error in line 11: OCSfVZ8hGS5 S333 35,1
Error in line 17: A322 A322 24,9
Error in line 19: OCSfVZ8hGS5 S246 9,5
Error in line 20: A322 S246 44,0
Error in line 18: HBQQ71yN A536 50,4
